--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -139,6 +139,8 @@
 
 .subscribe-form button:hover{
   background-color: var(--color-light-grey)3;
+  color: var(--white-color);
+
 }
 
 .bottom {
